--- a/templates/user/userbase.html
+++ b/templates/user/userbase.html
@@ -38,6 +38,9 @@
 
 <style>
     @media screen and (max-width: 1000px) {
+        .razorpay-payment-button{
+            padding: 10px 65px !important;
+        }
         #div-card{
             width: 21rem !important;
             height: 24rem !important;
