--- a/templates/user/userbase.html
+++ b/templates/user/userbase.html
@@ -123,10 +123,12 @@
                     <div class="navbar align-self-center d-flex">
                         <div class="d-lg-none flex-sm-fill mt-3 mb-4 col-7 col-sm-auto pr-3">
                             <div class="input-group">
-                                <input type="text" class="form-control" id="inputMobileSearch" placeholder="Search ...">
-                                <div class="input-group-text">
-                                    <i class="fa fa-fw fa-search"></i>
-                                </div>
+                                <form action="{% url 'home' %}" method="get" role="search" class="modal-content modal-body border-0 p-0">
+                                    <input type="text" class="form-control" id="inputMobileSearch" name="search" placeholder="Search ...">
+                                    <button type="submit" class="input-group-text">
+                                        <i class="fa fa-fw fa-search"></i>
+                                    </button>
+                                </form>
                             </div>
                         </div>
                         <a class="nav-icon d-none d-lg-inline" href="#" data-bs-toggle="modal" data-bs-target="#templatemo_search">
