--- a/templates/user/cart.html
+++ b/templates/user/cart.html
@@ -31,18 +31,21 @@
             <td data-label="Quantity" class="pt-4">
               <li class="list-inline-item  text-center">
                 {% if thisProduct.quantity == 1 %}
-                <button type="button" class="btn btn-success" id="btn-minus" disabled>-</button>
+                <button type="button" class="btn btn-success" id="btn-minus{{ thisProduct.id }}" onclick="changeQuantity('{{thisProduct.id}}', -1)" disabled>-</button>
                 {% else %}
-                <button type="button" class="btn btn-success" id="btn-minus{{ thisProduct.id }}" onclick="changeQuantity('{{thisProduct.id}}', -1)">-</button>
+                <button type="button" class="btn btn-success" id="btn-minus{{ thisProduct.id }}"
+                  onclick="changeQuantity('{{thisProduct.id}}', -1)">-</button>
                 {% endif %}
               </li>
               <li class="list-inline-item"><span class="badge bg-secondary" id="quantity-value{{thisProduct.id}}">{{ thisProduct.quantity }}</span></li>
               <li class="list-inline-item">
-                <button type="button" class="btn btn-success" onclick="changeQuantity('{{thisProduct.id}}', 1)">+</button>
+                <button type="button" class="btn btn-success"
+                  onclick="changeQuantity('{{thisProduct.id}}', 1)">+</button>
 
               </li>
             </td>
-            <td data-label="Total" class="pt-4" id="total-value-cart{{thisProduct.id}}">{{ thisProduct.get_item_price }}</td>
+            <td data-label="Total" class="pt-4" id="total-value-cart{{thisProduct.id}}">{{ thisProduct.get_item_price }}
+            </td>
             <td data-label="Remove" class="pt-4">
               <div>
                 <button class="btn btn-danger btn-sm px-6" data-bs-toggle="modal"
@@ -81,8 +84,8 @@
       {% endif %}
       <input type="hidden" id="cartempty" value="{{ order_object.items.exists }}">
     </div>
-    
 
+    
     <div class="p-5 d-flex justify-content-end" style="height: 450px;">
       <div class="card" style="height: 273px; width: 330px;">
         <h1 class="h2 fw-bold p-3">CART TOTALS</h1>
@@ -92,7 +95,8 @@
               <th scope="col" class="carttotal">Subtotal</th>
               <td data-label="Subtotal" id="">
                 <input type="hidden" id="total-amount-value" value="{{ total_amount }}">
-                <span id="total-amount-value-element">₹ {{ total_amount }}</span></td>
+                <span id="total-amount-value-element">₹ {{ total_amount }}</span>
+              </td>
             </tr>
             <tr>
               <th scope="col" class="carttotal">Tax</th>
@@ -105,10 +109,12 @@
                 <span id="grand-total-element">₹ {{ tax_amount }}</span>
               </td>
             </tr>
+            {% if id != None %}
             <tr>
               <td colspan="2" class="text-center"><a href="{% url 'checkout' %}"><button type="button"
                     class="btn btn-success btn-sm px-6 my-2" id="checkoutbtn">Proceed to CheckOut</button></a></td>
             </tr>
+            {% endif %}
           </tbody>
         </table>
 
@@ -123,103 +129,89 @@
   </div>
 </body>
 <script>
-    const emptycart = document.getElementById("cartempty").value
-    const btn = document.getElementById("checkoutbtn")
-    var quantity = document.getElementById('quantity-value').innerHTML
-    if(quantity == 1){
-      document.getElementById("btn-minus").disabled = true;
+  let is_load = false
+  const emptycart = document.getElementById('cartempty').value
+  const btn = document.getElementById('checkoutbtn')
+  var quantity = document.getElementById('quantity-value').innerHTML
+  btn.addEventListener('click', function placeOrder(e) {
+    if (emptycart == "False") {
+      e.preventDefault();
+      Swal.fire({
+        icon: 'error',
+        title: 'Oops...',
+        text: "Your cart is Empty, Please add any product!!",
+      })
     }
-    console.log(emptycart)
-    btn.addEventListener('click', function placeOrder(e){
-      if (emptycart == "False") {
-        e.preventDefault();
-        Swal.fire({
-          icon: 'error',
-          title: 'Oops...',
-          text: "Your cart is Empty, Please add any product!!",
-        })
-      }
-    })
+  })
 
-  function check(){
+  function check() {
     var quantity = document.getElementById('quantity-value').innerHTML
     console.log(quantity)
   }
-    
-  function changeQuantity(cartId,Count) {
-    var form = document.getElementById("myForm")
-    let csrftoken = form.getElementsByTagName("input")[0].value
-    var quantity = document.getElementById('quantity-value'+cartId).innerHTML
-    var price = document.getElementById('price-value'+cartId).innerHTML
-    var total_value = document.getElementById('total-amount-value').value
-    var total_value_cart = document.getElementById('total-value-cart'+cartId).innerHTML
-    var grandtotal_value = document.getElementById('grand-total').value
-    total_value = parseFloat(total_value)
-    
-    console.log(total_value)
-    total_value_cart = parseFloat(total_value_cart)
-    price = parseFloat(price)
-    grandtotal_value = parseFloat(grandtotal_value)
-    
-    quantity = parseInt(quantity)
-    count = parseInt(Count)
-    
-    
-    $.ajax({
-      type: "POST",
-      contentType: "application/json",
-      url: "/addcartquantity/",
-      data: JSON.stringify({cart: cartId, count:Count}),
-      dataType: "json",
-      headers: {
-        'X-CSRFToken': csrftoken,
-      },
 
-      success: (responce) => {
-        console.log('success')
+  function changeQuantity(cartId, Count) {
+    if (!is_load) {
+      var form = document.getElementById("myForm")
+      let csrftoken = form.getElementsByTagName("input")[0].value
+      var quantity = document.getElementById('quantity-value' + cartId).innerHTML
+      var price = document.getElementById('price-value' + cartId).innerHTML
+      var total_value = document.getElementById('total-amount-value-element').innerHTML
+      total_value = total_value.split(' ')
+      total_value = total_value[1] 
+      var total_value_cart = document.getElementById('total-value-cart' + cartId).innerHTML
+      var grandtotal_value = document.getElementById('grand-total').value
+      total_value = parseFloat(total_value)
+      total_value_cart = parseFloat(total_value_cart)
+      price = parseFloat(price)
+      grandtotal_value = parseFloat(grandtotal_value)
+      quantity = parseInt(quantity)
+      count = parseInt(Count)
+      is_load = true;
 
-        // if (responce.removeProduct) {
-        //   alert("Product removed")
-        //   location.reload()
-        // } else {
-          // total_value += price
-          document.getElementById('quantity-value'+cartId).innerHTML = quantity + count
-          if (count == 1){
+      $.ajax({
+        type: "POST",
+        contentType: "application/json",
+        url: "/addcartquantity/",
+        data: JSON.stringify({ cart: cartId, count: Count }),
+        dataType: "json",
+        headers: {
+          'X-CSRFToken': csrftoken,
+        },
+
+        success: (responce) => {
+          console.log('success')
+          is_load = false;
+          document.getElementById('quantity-value' + cartId).innerHTML = quantity + count
+          if (count == 1) {
             var newprice = total_value_cart + price
             var newtotal = total_value + price
-            document.getElementById('total-value-cart'+cartId).innerHTML = newprice + ".0"
-            document.getElementById('total-amount-value-element').innerHTML = "₹ " + newtotal  + ".0"
-            var tax_amount = (newtotal*3)/100
-            document.getElementById('tax-value').innerHTML = "₹ " + (tax_amount)  + ".0"
-            document.getElementById('grand-total-element').innerHTML = "₹ " + (newtotal + tax_amount)  + ".0"
-
-          }else{
+            document.getElementById('total-value-cart' + cartId).innerHTML = newprice + ".0"
+            document.getElementById('total-amount-value-element').innerHTML = "₹ " + newtotal + ".0"
+            var tax_amount = (newtotal * 3) / 100
+            document.getElementById('tax-value').innerHTML = "₹ " + (tax_amount) + ".0"
+            document.getElementById('grand-total-element').innerHTML = "₹ " + (newtotal + tax_amount) + ".0"
+          }
+          else {
             var newprice = total_value_cart - price
             var newtotal = total_value - price
-            document.getElementById('total-value-cart'+cartId).innerHTML = newprice
+            document.getElementById('total-value-cart' + cartId).innerHTML = newprice
             document.getElementById('total-amount-value-element').innerHTML = "₹ " + newtotal
-            var tax_amount = (newtotal*3)/100
-            document.getElementById('tax-value').innerHTML = "₹ " + (tax_amount) 
-            document.getElementById('grand-total-element').innerHTML = "₹ " + (newtotal + tax_amount) 
+            var tax_amount = (newtotal * 3) / 100
+            document.getElementById('tax-value').innerHTML = "₹ " + (tax_amount)
+            document.getElementById('grand-total-element').innerHTML = "₹ " + (newtotal + tax_amount)
           }
-          
-          // document.getElementById('total-value').innerHTML = total_value
-          // var tax_amount = (total_value * 3)/100
-          // tax_amount = parseFloat(tax_amount)
-
-          
-          if(quantity == 2 && count == -1){
-            document.getElementById("btn-minus"+cartId).disabled = true;
+          if (quantity == 2 && count == -1) {
+            document.getElementById('btn-minus' + cartId).disabled = true;
           }
-          else{
-            document.getElementById("btn-minus"+cartId).disabled = false;
+          else {
+            console.log(document.getElementById('btn-minus' + cartId).disabled)
+            if (document.getElementById('btn-minus' + cartId).disabled == true) {
+              document.getElementById('btn-minus' + cartId).disabled = false;
+            }
           }
-          
-        //   document.querySelector('.sub').innerHTML = responce.total
-        //   console.log(responce.total)
-        // }
-      }
-    })
+        }
+      })
+    }
   }
 </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
