--- a/templates/user/checkout.html
+++ b/templates/user/checkout.html
@@ -351,7 +351,7 @@
                 return actions.order.create({
                     purchase_units: [{
                         amount: {
-                            value: '0.01' //'{{ usd_amount }}'
+                            value: '{{ usd_amount }}'
                         }
                     }]
                 });
